Fix AssetsManagerEx issue for new memory model

--- a/tools/tojs/cocos2dx_extension.ini
+++ b/tools/tojs/cocos2dx_extension.ini
@@ -48,7 +48,8 @@ skip = ScrollView::[(g|s)etDelegate$],
         ActionNode::[initWithDictionary],
         ActionObject::[initWithDictionary],
         Manifest::[getAssets],
-        AssetsManagerEx::[getFailedAssets updateAssets]
+        AssetsManagerEx::[getFailedAssets updateAssets],
+        EventListenerAssetsManagerEx::[create init]
 
 rename_functions =
 
