--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tools/bindings-generator"]
         path = tools/bindings-generator
         url = git://github.com/cocos2d/bindings-generator.git
+[submodule "external"]
+	path = external
+	url = git@120.26.43.151:playboy/cocos2dx-external.git
