enhanced Simulator features - add Design Resolution Size to "View" menu. - add Design Resolution Policy to "View" menu. - add "designWidth", "designHeight", "designResolutionPolicy" keys to config.json. - add "design_resolution_size" key to config.json, for appending user defined design resolution size to "View" menu.

--- a/tools/simulator/config.json
+++ b/tools/simulator/config.json
@@ -5,6 +5,9 @@
        "name": "simulator",
        "width": 960,
        "height": 640,
+       "designWidth": 960,
+       "designHeight": 640,
+       "designResolutionPolicy": "EXACT_FIT",
        "entry": "",
        "consolePort": 6050,
        "uploadPort": 6060
