add ScaleFactor items to Simulator menu

--- a/tools/simulator/config.json
+++ b/tools/simulator/config.json
@@ -8,6 +8,7 @@
        "designWidth": 960,
        "designHeight": 640,
        "designResolutionPolicy": "EXACT_FIT",
+       "designContentScaleFactor": 1.0,
        "entry": "",
        "consolePort": 6050,
        "uploadPort": 6060
