add 'gesture' command for CCConsole

--- a/cocos/2d/CMakeLists.txt
+++ b/cocos/2d/CMakeLists.txt
@@ -71,6 +71,7 @@ set(COCOS_2D_SRC
   ../external/clipper/clipper.cpp
   2d/CCTextFieldTTF.cpp
   2d/CCTileMapAtlas.cpp
+  2d/CCTouchAction.cpp
   2d/CCTMXLayer.cpp
   2d/CCTMXObjectGroup.cpp
   2d/CCTMXTiledMap.cpp
