Fixes USE_BULLET option
The USE_BULLET option can affect both CC_USE_PHYSICS and CC_USE_3D_PHYSICS depending on whether the option is enabled or disabled, which will clobber the definitions that other options have already set such as USE_CHIPMUNK.

This fixes it to just affect CC_USE_3D_PHYSICS (which presumably was the intention all along).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -263,7 +263,7 @@ if(USE_BULLET)
   endif()
   message(STATUS "Bullet include dirs: ${BULLET_INCLUDE_DIRS}")
   add_definitions(-DCC_ENABLE_BULLET_INTEGRATION=1)
-  add_definitions(-DCC_USE_PHYSICS=1)
+  add_definitions(-DCC_USE_3D_PHYSICS=1)
 else()
   add_definitions(-DCC_ENABLE_BULLET_INTEGRATION=0)
   add_definitions(-DCC_USE_3D_PHYSICS=0)
