--- a/cocos/scripting/js-bindings/CMakeLists.txt
+++ b/cocos/scripting/js-bindings/CMakeLists.txt
@@ -45,6 +45,8 @@ set(JSBINDING_SRC
   auto/jsb_cocos2dx_3d_extension_auto.cpp
   auto/jsb_cocos2dx_physics3d_auto.cpp
   auto/jsb_cocos2dx_navmesh_auto.cpp
+  auto/js_bindings_chipmunk_functions.cpp
+  auto/js_bindings_chipmunk_auto_classes.cpp
   manual/ScriptingCore.cpp
   manual/cocos2d_specifics.cpp
   manual/js_manual_conversions.cpp
@@ -56,8 +58,6 @@ set(JSBINDING_SRC
   manual/jsb_event_dispatcher_manual.cpp
   manual/component/CCComponentJS.cpp
   manual/chipmunk/js_bindings_chipmunk_manual.cpp
-  manual/chipmunk/js_bindings_chipmunk_functions.cpp
-  manual/chipmunk/js_bindings_chipmunk_auto_classes.cpp
   manual/chipmunk/js_bindings_chipmunk_registration.cpp
   manual/cocosbuilder/js_bindings_ccbreader.cpp
   manual/cocostudio/jsb_cocos2dx_studio_manual.cpp
@@ -101,7 +101,7 @@ include_directories(
   ${cocos_root}/cocos/editor-support/spine
   ${cocos_root}/cocos/editor-support/cocosbuilder
   ${cocos_root}/cocos/editor-support/cocostudio
-  ${cocos_root}/external/chipmunk/include/chipmunk
+  ${CHIPMUNK_INCLUDE_DIRS}
 )
 
 add_library(jscocos2d STATIC
