--- a/cocos/scripting/js-bindings/proj.win8.1-universal/libjscocos2d/libjscocos2d.Shared/libjscocos2d.Shared.vcxitems.filters
+++ b/cocos/scripting/js-bindings/proj.win8.1-universal/libjscocos2d/libjscocos2d.Shared/libjscocos2d.Shared.vcxitems.filters
@@ -65,17 +65,17 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\manual\3d\jsb_cocos2dx_3d_manual.h">
       <Filter>manual</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_auto_classes.h">
-      <Filter>manual\chipmunk</Filter>
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\auto\js_bindings_chipmunk_auto_classes.h">
+      <Filter>auto</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_auto_classes_registration.h">
-      <Filter>manual\chipmunk</Filter>
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\auto\js_bindings_chipmunk_auto_classes_registration.h">
+      <Filter>auto</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_functions.h">
-      <Filter>manual\chipmunk</Filter>
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\auto\js_bindings_chipmunk_functions.h">
+      <Filter>auto</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_functions_registration.h">
-      <Filter>manual\chipmunk</Filter>
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\auto\js_bindings_chipmunk_functions_registration.h">
+      <Filter>auto</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_manual.h">
       <Filter>manual\chipmunk</Filter>
@@ -203,11 +203,11 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\manual\3d\jsb_cocos2dx_3d_manual.cpp">
       <Filter>manual</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_auto_classes.cpp">
-      <Filter>manual\chipmunk</Filter>
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\auto\js_bindings_chipmunk_auto_classes.cpp">
+      <Filter>auto</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_functions.cpp">
-      <Filter>manual\chipmunk</Filter>
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\auto\js_bindings_chipmunk_functions.cpp">
+      <Filter>auto</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_manual.cpp">
       <Filter>manual\chipmunk</Filter>
