configure for mac project

--- a/cocos/ui/CMakeLists.txt
+++ b/cocos/ui/CMakeLists.txt
@@ -54,6 +54,7 @@ set(COCOS_UI_SRC
   ui/UIWidget.cpp
   ui/UIEditBox/UIEditBox.cpp
   ui/UILayoutComponent.cpp
+  ui/UITabControl.cpp
   ${COCOS_UI_SPECIFIC_SRC}
 
 )
