--- a/cocos/scripting/js-bindings/proj.win8.1-universal/libjscocos2d/libjscocos2d.Shared/libjscocos2d.Shared.vcxitems.filters
+++ b/cocos/scripting/js-bindings/proj.win8.1-universal/libjscocos2d/libjscocos2d.Shared/libjscocos2d.Shared.vcxitems.filters
@@ -135,10 +135,10 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\manual\js-BindingsExport.h">
       <Filter>manual</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_auto_classes.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_auto_classes_registration.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_functions.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_functions_registration.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\auto\js_bindings_chipmunk_auto_classes.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\auto\js_bindings_chipmunk_auto_classes_registration.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\auto\js_bindings_chipmunk_functions.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\auto\js_bindings_chipmunk_functions_registration.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\auto\jsb_cocos2dx_3d_auto.cpp">
@@ -256,8 +256,8 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\manual\js_module_register.cpp">
       <Filter>manual</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_auto_classes.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\manual\chipmunk\js_bindings_chipmunk_functions.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\auto\js_bindings_chipmunk_auto_classes.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\auto\js_bindings_chipmunk_functions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="auto">
