--- a/cocos/network/CMakeLists.txt
+++ b/cocos/network/CMakeLists.txt
@@ -4,7 +4,7 @@ if(WINDOWS)
 elseif(LINUX)
   set(PLATFORM_LINK websockets ssl crypto)
 elseif(ANDROID)
-  set(PLATFORM_LINK websockets ssl crypto)
+  set(PLATFORM_LINK websockets)
 else()
   set(PLATFORM_LINK websockets)
 endif()
