--- a/cocos/CMakeLists.txt
+++ b/cocos/CMakeLists.txt
@@ -97,7 +97,7 @@ if(WINDOWS)
   list(APPEND PLATFORM_SPECIFIC_LIBS ws2_32 winmm)
 elseif(LINUX)
   foreach(_pkg OPENGL GLEW GLFW3 FMOD FONTCONFIG THREADS GTK3)
-    cocos_use_pkg(cocos2d ${_pkg})
+    cocos_use_pkg(cocos2dInternal ${_pkg})
   endforeach()
 elseif(MACOSX OR APPLE)
   cocos_use_pkg(cocos2dInternal GLFW3)
@@ -171,7 +171,7 @@ ADD_LIBRARY(cocos2d)
 if(ANDROID)
   target_link_libraries(cocos2d -Wl,-whole-archive cocos2dxandroid_static -Wl,-no-whole-archive)
   target_link_libraries(cocos2d cocos2dInternal cpufeatures)
-ELSE()
+else()
   target_link_libraries(cocos2d cocos2dInternal)
 endif()
 
